* [FIX][UI] UAB - Add padding-left to bottom module zone to prevent overlap of bottom modules by the aside menu.

--- a/themes/base_files/scss/feature/adminui.scss
+++ b/themes/base_files/scss/feature/adminui.scss
@@ -46,7 +46,8 @@ body.tiki-admin {
 
 @media (min-width: 993px) {
     .tiki-admin.uab:not(.fixed_width) #tikifeedback,
-    .tiki-admin.uab:not(.fixed_width) .admin-content {
+    .tiki-admin.uab:not(.fixed_width) .admin-content,
+    .tiki-admin.uab:not(.fixed_width) .bottom_modules {
         padding-left: 278px !important;
     }
 }
